# Curupira

./: .dockerignore  .gitignore  CI_DOCUMENTATION.md  CLAUDE.md  Cargo.toml  DEVELOPING.md  DOCUMENTATION.md  Dockerfile  README.md  RUNNING.md  docker-compose.yaml  init-db.sh
.sqlx/: query-00c8f28e6e9171b16cc0313015181852843cbce17225740ebb5c9e3025cfd9d7.json  query-287fffc86aa03c1c34c6a3e1f44fc6c197850a7e12b178b51590817a81d0e0d6.json  query-2954394899054be2fcbc0f90c23ead6f10ed9abef03b9faf00ec38d4ae0e8a48.json  query-325ae022c4c8b1c35c9a42c877269c4d2e44619d6a9855aff6fcd98faf4e1e0e.json  query-403b64cb38223791aeb09c2ba1b150dfc9228a0a46ee4488bb1e651f52b5541d.json  query-454d255efcfc6db43e941eb2748fbadcf1c3200978c1b38dd0c2c93f375614cc.json  query-560113f1c2bc179fc496b13ba764fafb46d8322c6c0f23c3222518f68dfa545c.json  query-692121a435a62d86c9ab2e2c76139bd6acdb04dc52f05830f5b55bbb85024d04.json  query-71cf6d1998b95feeaf38bbd5ccb792f904950e352ff4dfd139aa48bc561ce4fe.json  query-7337695e2e73a7cf47484705dc9b5b148f4a1221f1eb8439e705eb9baef21779.json  query-7732a0beab2836dfa247bb22cb9c96962487992530382325f5f362603d0dbbc4.json  query-77b1541ff572307d72150ce530e591c5af55b7e77078084d2d01047a9f438824.json  query-918a9249c45fb88f1d5a0f2386ae990d8df76cbfe5a9ffd07a35e15f7a3f2456.json  query-ae0096d732d01cb1b2ae5043030b2759e4342dd9ddddc73657cc14a4a669251b.json  query-bf79d9935e163329ceeb111eb96f9c44d61874d689e5bfe43d60ba2321ff0e3c.json  query-cc6bc352ae100104bef500392f06e980d6f07b84fa56412d6d7d0ae2d6e8453a.json  query-cd7ec8673164a5746b44a7737e4b5a96b733c02e1d478d90b31a0f33f5a5f00c.json  (+2 more)
deploy/: .env.tpl  (+6 more)
(+31 files in other folders)
